unified-ingress/ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    oci.oraclecloud.com/reserved-ips: 168.107.11.85
    service.beta.kubernetes.io/oci-load-balancer-shape: flexible
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    oci.oraclecloud.com/load-balancer-subnets: ocid1.securitylist.oc1.ap-chuncheon-1.aaaaaaaamxqsz4l6grcjmw2yvvhlok2ipfavuighltywf2vyrdl33b7mlmvq
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
    nodePort: 31646
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
    nodePort: 31505
