unified-ingress/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-board-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /blog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-board-service
            port:
              number: 80
